# Road-Analysis-Project

./: README.md  startup_script.sh
Capture_image/: camera.py
Demo_sprint4/: main.py  sharedRessources.py
Demo_sprint4/carControl/: canControllerThreads.py
Demo_sprint4/messageManagement/: messageToIHMManager.py
Deprecated_Ressources_Deep_Learning/: demo_detector_shapes.py  roadsign_detector_machineLearning.py  shape_detector_canny.py
Deprecated_Ressources_Deep_Learning/images/: teststop2.ppm
Housemade_machineLearning_Model/: Useful_links.txt  capture_image.py  rename_files.py
Housemade_machineLearning_Model/housemade_model/: links.txt  modelmaker_frominternet.py  pipeline.config
IHM_Android/: DriverApp.apk  README.md  app-debug.apk
Raspberry/RhaegalRaspi/: main.py  sharedRessources.py
Raspberry/RhaegalRaspiAnais/: .project
Raspberry/Romero_App/: CMakeLists.txt
Raspberry/Romero_App/bluez5/src/shared/: att-types.h  att.c  att.h  crypto.h  gatt-server.c  gatt-server.h  io.h  mainloop.c  mainloop.h  queue.h
Raspberry/Romero_App/src/: AcmApplication.cpp  Camera.hpp  CarParam.hpp  ObstacleDetector.hpp  common-defs.h  main.cpp
Raspberry/Romero_App/src/can/: CanController.hpp
Raspberry/Romero_App/src/gatt/: GattServer.cpp  GattServer.hpp
Raspberry/Romero_App/src/utils/: prompt.h
Ressources_Test_Project/: README.md
Vehicle_Control/: command.py  seprateMessageThread.py  testUS2.py
demo_sprint2/: command.py  demo_detector_shapes.py  main.py  raspicam_capture.ppm  seprateMessageThread.py  working_demo_dummy_shapes.py
demo_sprint2_rectif/: command.py  main.py  raspicam_capture.ppm
demo_sprint3/: command.py  main.py  roadsign_detector.py  seprateMessageThread.py  sharedRessources.py
deprecated_Ressources_Deep_Learning/: logtime.txt
machineLearning_model/: README.txt  capture_image.py  location_machinelearning.py  rename_files.py  stats.ods  test_detection_stats.py
testDataAugmentation/: dataAugmentation.py  testAugmentator.py
(+3295 files in other folders)
